# mastercoder2014

./: LICENSE  README.md
doc/zad7_input/: gora1.csv  gora2.csv
finals/: README.md
finals/task1/: main.cpp
task2/: CLI.cpp  CLI.h  CMakeLists.txt  CliInstaller.cpp  CliInstaller.h  CliInstallersFactory.cpp  CliInstallersFactory.h  Component.h  ComponentInstaller.cpp  ComponentInstaller.h  Configuration.h  Daemon.h  DaemonInstaller.cpp  DaemonInstaller.h  DaemonInstallersFactory.cpp  DaemonInstallersFactory.h  LinuxCliInstaller.cpp  LinuxCliInstaller.h  LinuxDaemonInstaller.cpp  LinuxDaemonInstaller.h  MacOsCliInstaller.cpp  MacOsCliInstaller.h  MacOsDaemonInstaller.cpp  MacOsDaemonInstaller.h  Makefile  OperatingSystem.h  README.txt  README.txt~  RemoteApplication.h  RemoteDaemon.h  Service.cpp  Service.h  ServiceInstaller.cpp  ServiceInstaller.h  UserPreferences.cpp  UserPreferences.h  Win7CliInstaller.cpp  Win7CliInstaller.h  Win7DaemonInstaller.cpp  Win7DaemonInstaller.h  (+5 more)
task3/: BaseConverter.cpp  BaseConverter.h  CMakeLists.txt  test.cpp
task4/: CMakeLists.txt  Makefile  Walls.cpp  Walls.h  main.cpp
task5/: AbstractConfiguration.h  AbstractTextDistance.h  CMakeLists.txt  ConfigurationService.h  DistanceType.h  DistanceValue.cpp  DistanceValue.h  JaroWinkerTextDistance.cpp  JaroWinkerTextDistance.h  LevensteinTextDistance.cpp  LevensteinTextDistance.h  Makefile  MockConfiguration.cpp  MockConfiguration.h  TestAssert.cpp  TestAssert.h  TestCase.cpp  TestCase.h  TextDistanceServiceTest.cpp  TextDistanceServiceTest.h  TextSimilarityServiceImpl.cpp  TextSimilarityServiceImpl.h  WordValue.cpp  WordValue.h  WordValueFactory.cpp  WordValueFactory.h  main.cpp
task6/: task6.sql  task6.sql~
task7/: CMakeLists.txt  Grid.cpp  Grid.h  Makefile  Node.cpp  Node.h  main.cpp
task8/: CMakeLists.txt  atm_resource_info_service_impl.cpp  atm_resource_info_service_impl.h  atm_withdrawal_calculation_service_impl.cpp  atm_withdrawal_calculation_service_impl.cpp~  atm_withdrawal_calculation_service_impl.h  atm_withdrawal_calculation_service_impl.h~  main.cpp  withdrawal_info_impl.cpp  withdrawal_info_impl.h
task8/api/: atm_resource_info_service.h  atm_withdrawal_calculation_service.h
task8/tests/: assert_exception.h  test_case.cpp  test_case.h  tests.cpp  tests.h
task8/values/: banknote_bundle.h  denomination.h  denomination_bundle.h  money.h  suggested_withdrawal.h  withdrawal_info.cpp  withdrawal_info.h
